--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Hello World</title>
+</head>
+<body>
+	<h1>The Peter Site</h1>
+		<p>This site is to demonstrate that I, Peter, can make a basic website. It will be a moderately interesting viewing for you, or it will be boring. Either way, I hope you find that my site is indeed and website and contains common features.</p>
+		
+</body>
+</html>
