--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
 	<title>Hello World</title>
 </head>
 <body>
-	<h1>The Peter Site</h1>
-		<p>This site is to demonstrate that I, Peter, can make a basic website. It will be a moderately interesting viewing for you, or it will be boring. Either way, I hope you find that my site is indeed and website and contains common features.</p>
-	<h2>Why Make a Website</h2>
-		<p>Having the ability to make a website is an incredibly powerful thing. Sure it may seem uninteresting when you only look at what is on this site, but what if we imagine the possibilities?! This table could contain grounbreaking data or research that has the ability to change the way we think of something. This image could be photojournalism supporting an article that could raise awareness to a situation and in-turn results in people's lives being saved! These links could be crucial resources for a young parent struggling to learn how to provide special care for their child. Think of the possibilities!</p>
+	<div>
+		<h1>The Peter Site</h1>
+			<p>This site is to demonstrate that I, Peter, can make a basic website. It will be a moderately interesting viewing for you, or it will be boring. Either way, I hope you find that my site is indeed and website and contains common features.</p>
+	</div>
+	<div>
+		<h2>Why Make a Website</h2>
+			<p>Having the ability to make a website is an incredibly powerful thing. Sure it may seem uninteresting when you only look at what is on this site, but what if we imagine the possibilities?! This table could contain grounbreaking data or research that has the ability to change the way we think of something. This image could be photojournalism supporting an article that could raise awareness to a situation and in-turn results in people's lives being saved! These links could be crucial resources for a young parent struggling to learn how to provide special care for their child. Think of the possibilities!</p>
+	</div>
+	<div>
+		<h2>Some Fun Things to Make Lists About</h2>
+			<ul>
+				<li>Ordered list of your favorite vegetable recipes from most favorite to least favorite</li>
+				<li>Ordered list of your favorite houses in Game of Thrones from most favorite to least favorite (so beginning with Stark, obviously)</li>
+				<li>Unordered list of things that you might enjoy pondering when you are bored</li>
+	</div>
 </body>
 </html>
