--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	<div>
 		<h2>Why Make a Website</h2>
 			<p>Having the ability to make a website is an incredibly powerful thing. Sure it may seem uninteresting when you only look at what is on this site, but what if we imagine the possibilities?! This table could contain grounbreaking data or research that has the ability to change the way we think of something. This image could be photojournalism supporting an article that could raise awareness to a situation and in-turn results in people's lives being saved! These links could be crucial resources for a young parent struggling to learn how to provide special care for their child. Think of the possibilities!</p>
+		<br>
+		<img src="http://i.imgur.com/y68oXiD.jpg" alt="Palm Springs commercial photography">
 	</div>
 	<div>
 		<h2>Some Fun Things to Make Lists About</h2>
