--- a/index.html
+++ b/index.html
@@ -21,5 +21,18 @@
 				<li>Ordered list of your favorite houses in Game of Thrones from most favorite to least favorite (so beginning with Stark, obviously)</li>
 				<li>Unordered list of things that you might enjoy pondering when you are bored</li>
 	</div>
+	<div>
+		<table border=1>
+			<tr>
+				<th>Possible Table Column 1</th>
+				<th>Possible Table Column 2</th>
+				<th>Possible Table Column 3</th>
+			</tr>
+			<tr>
+				<td>Possible Table Data 1</td>
+				<td>Possible Table Data 2</td>
+				<td>Possible Table Data 3</td>
+			</tr>
+	</div>
 </body>
 </html>
