--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<h2>Why Make a Website</h2>
 			<p>Having the ability to make a website is an incredibly powerful thing. Sure it may seem uninteresting when you only look at what is on this site, but what if we imagine the possibilities?! This table could contain grounbreaking data or research that has the ability to change the way we think of something. This image could be photojournalism supporting an article that could raise awareness to a situation and in-turn results in people's lives being saved! These links could be crucial resources for a young parent struggling to learn how to provide special care for their child. Think of the possibilities!</p>
 		<br>
+		<h4>This hatching turtle symbolizes my new beginnings as a web developer.</h4>
 		<img src="http://i.imgur.com/y68oXiD.jpg" alt="Palm Springs commercial photography">
 	</div>
 	<div>
@@ -20,8 +21,11 @@
 				<li>Ordered list of your favorite vegetable recipes from most favorite to least favorite</li>
 				<li>Ordered list of your favorite houses in Game of Thrones from most favorite to least favorite (so beginning with Stark, obviously)</li>
 				<li>Unordered list of things that you might enjoy pondering when you are bored</li>
+			</ul>
 	</div>
+	<br>
 	<div>
+		<h3>Checkout This Cool Table!</h3>
 		<table border=1>
 			<tr>
 				<th>Possible Table Column 1</th>
@@ -33,6 +37,12 @@
 				<td>Possible Table Data 2</td>
 				<td>Possible Table Data 3</td>
 			</tr>
+		</table>
 	</div>
+	<br>
+	<div>
+		<a href="second_page.html">Checkout My Really Complex Second Page!</a>
+	</div>
+	<br>
 </body>
 </html>
