add link with critique of site

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 	</div>
 	<div>
 		<h2>Why Make a Website</h2>
-			<p>Having the ability to make a website is an incredibly powerful thing. Sure it may seem uninteresting when you only look at what is on this site, but what if we imagine the possibilities?! This table could contain grounbreaking data or research that has the ability to change the way we think of something. This image could be photojournalism supporting an article that could raise awareness to a situation and in-turn results in people's lives being saved! These links could be crucial resources for a young parent struggling to learn how to provide special care for their child. Think of the possibilities!</p>
-		<br>
+			<p>Having the ability to make a website is an incredibly powerful thing. Sure it may seem uninteresting when you only look at what is on this site, but what if we imagine the possibilities?! This table could contain groundbreaking data or research that has the ability to change the way we think of something. This image could be photojournalism supporting an article that could raise awareness to a situation and in-turn results in people's lives being saved! These links could be crucial resources for a young parent struggling to learn how to provide special care for their child. Think of the possibilities!</p>
 		<h4>This hatching turtle symbolizes my new beginnings as a web developer.</h4>
 		<img src="http://i.imgur.com/y68oXiD.jpg" alt="Palm Springs commercial photography">
 	</div>
@@ -23,7 +22,6 @@
 				<li>Unordered list of things that you might enjoy pondering when you are bored</li>
 			</ul>
 	</div>
-	<br>
 	<div>
 		<h3>Checkout This Cool Table!</h3>
 		<table border=1>
@@ -42,6 +40,10 @@
 	<br>
 	<div>
 		<a href="second_page.html">Checkout My Really Complex Second Page!</a>
+	</div>
+	<div>
+		<p>Below is a link to the Code Academy site. There seem to be some things I don't understand but I know from using the site that it is very easy to use and always works. It's fun to see how they constructed the dashboard and how they style it and construct it using things like "span" to make blank spaces. Everything seems to be neatly organized and easy to navigate. I recognize the html boiler, the links, the div block level elements. </p>
+		<a href="https://www.codecademy.com/pro/dashboard">Code Academy</a>
 	</div>
 	<br>
 </body>
