--- a/second_page.html
+++ b/second_page.html
@@ -1,1 +1,15 @@
-Second page says <strong>RARRRRRRR!!!!!!!</strong>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Second Page</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+	<p>Second page says <strong>RARRRRRRR!!!!!!!</strong></p>
+<br>
+<br>
+	<p>But you'd probably prefer the <a href="index.html">home</a> page</p>
+</body>
+</html>
+
+
