quick text edit

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		<a href="second_page.html">Checkout My Really Complex Second Page!</a>
 	</div>
 	<div>
-		<p>Below is a link to the Code Academy site. There seem to be some things I don't understand but I know from using the site that it is very easy to use and always works. It's fun to see how they constructed the dashboard and how they style it and construct it using things like "span" to make blank spaces. Everything seems to be neatly organized and easy to navigate. I recognize the html boiler, the links, the div block level elements. </p>
+		<p>Below is a link to the Code Academy site. There seem to be some things I don't understand in their code but I know from using the site that it is very easy to use and always works. It's fun to see how they constructed the dashboard and how they style it and construct it using things like "span" to make blank spaces. Everything seems to be neatly organized and easy to navigate. I recognize the html boiler, the links, the div block level elements. </p>
 		<a href="https://www.codecademy.com/pro/dashboard">Code Academy</a>
 	</div>
 	<br>
