--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<div>
+	<section id="intro">
 		<h1>The Peter Site</h1>
 			<p>This site is to demonstrate that I, Peter, can make a basic website. It will be a moderately interesting viewing for you, or it will be boring. Either way, I hope you find that my site is indeed and website and contains common features.</p>
-	</div>
+	</section>
 	<div>
-		<h2>Why Make a Website</h2>
+		<h2 class="one">Why Make a Website</h2>
 			<p>Having the ability to make a website is an incredibly powerful thing. Sure it may seem uninteresting when you only look at what is on this site, but what if we imagine the possibilities?! This table could contain groundbreaking data or research that has the ability to change the way we think of something. This image could be photojournalism supporting an article that could raise awareness to a situation and in-turn results in people's lives being saved! These links could be crucial resources for a young parent struggling to learn how to provide special care for their child. Think of the possibilities!</p>
-		<h4>This hatching turtle symbolizes my new beginnings as a web developer.</h4>
+		<section id="turtle-pic"><h4>This hatching turtle symbolizes my new beginnings as a web developer.</h4>
 		<img src="http://i.imgur.com/y68oXiD.jpg" alt="Palm Springs commercial photography">
+		</section>
 	</div>
 	<div>
-		<h2>Some Fun Things to Make Lists About</h2>
+		<h2 class="one">Some Fun Things to Make Lists About</h2>
 			<ul>
 				<li>Ordered list of your favorite vegetable recipes from most favorite to least favorite</li>
 				<li>Ordered list of your favorite houses in Game of Thrones from most favorite to least favorite (so beginning with Stark, obviously)</li>
@@ -24,7 +25,7 @@
 			</ul>
 	</div>
 	<div>
-		<h3>Checkout This Cool Table!</h3>
+		<h2 class="one">Checkout This Cool Table!</h2>
 		<table border=1>
 			<tr>
 				<th>Possible Table Column 1</th>
