--- a/second_page.html
+++ b/second_page.html
@@ -5,7 +5,10 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<p>Second page says <strong>RARRRRRRR!!!!!!!</strong></p>
+	
+	<section id="rar-pic">
+		Second page says <strong>RARRRRRRR!!!!!!!</strong></p>
+	</section>
 <br>
 <br>
 	<p>But you'd probably prefer the <a href="index.html">home</a> page</p>
