quick p tag fix

--- a/second_page.html
+++ b/second_page.html
@@ -7,7 +7,7 @@
 <body>
 	
 	<section id="rar-pic">
-		Second page says <strong>RARRRRRRR!!!!!!!</strong></p>
+		<p>Second page says <strong>RARRRRRRR!!!!!!!</strong></p>
 	</section>
 <br>
 <br>
